--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,17 @@
 
 {
   "version": 2,
+  "builds": [
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "api/posts.js", "use": "@vercel/node" }
+  ],
   "functions": {
-    "api/*.js": {
+    "api/posts.js": {
       "runtime": "nodejs18.x"
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/api/posts", "dest": "/api/posts.js" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
