--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "fb-widget",
+  "name": "fb-widget-merged",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
