--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "fb-widget-merged",
+  "name": "fb-widget",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
